--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- Floating Whatsapp -->
     <a
       class="whatsapp animation--fade-in"
-      href="https://wa.me/351910457476"
+      href="https://wa.me/5511965735769"
       target="_blank"
     >
       <div
@@ -118,7 +118,7 @@
               </svg>
             </span>
           </div>
-          <span class=" whatsapp__content ">+351 910 457 476</span>
+          <span class=" whatsapp__content ">+55 (11) 96573-5769</span>
         </span>
       </div>
       <div class="whatsapp__icon ">
@@ -548,15 +548,21 @@
 
             <article>
               <h1 class="tr-address">Endereço</h1>
-
               <address class="tr-lo-p">
-                <strong>Brasil</strong>: <br />
+                <strong>São Paulo</strong>: <br />
+                Rua Cel. Antonio Marcelo, 135 - Brás - São Paulo SP 
+
+                <br />CEP: 03054-040
+              </address>
+              <br />
+              <address class="tr-lo-p">
+                <strong>Atibaia</strong>: <br />
                 Rua Dr. Valdomiro Franco da Silveira, 285 - Recreio Estoril
                 Atibaia - SP
 
                 <br />CEP: 12944-110
               </address>
-              <br /><br />
+              <br />
               <address>
                 <span
                   ><strong>Filial em Portugal</strong>:<br />Rua de Gonçalo
