--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </svg>
           </span>
         </div>
-        <span class=" whatsapp__content ">+55 (11) 96573-5769</span>
+        <span class=" whatsapp__content ">+351 915 472 099</span>
       </span>
     </div>
     <div class="whatsapp__icon ">
